[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
authors = [
    {email = "", name = "UCL ARC"},
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
]
description = ""
dynamic = [
    "version",
]
keywords = [
]
name = "python-template"
readme = "README.md"
requires-python = ">=3.8"
license.file = "LICENSE.md"
optional-dependencies.dev = [
    "black",
    "mypy",
    "pre-commit",
    "tox",
]
urls.homepage = "https://github.com/UCL-ARC/python-template"

[tool.coverage]
report = {skip_covered = true, sort = "cover"}
run = {branch = true, parallel = true, source = [
    "{{cookiecutter.project_slug}}",
]}
paths.source = [
    "src",
    ".tox*/*/lib/python*/site-packages",
]

[tool.mypy]
explicit_package_bases = true
plugins = [
    "numpy.typing.mypy_plugin",
    "pydantic.mypy",
]

[tool.pytest.ini_options]
addopts = "--color=yes -v"
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
force-exclude = true
per-file-ignores = {"tests/*" = [
    "S101",
]}
select = [
    "A",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
isort.known-first-party = ["{{cookiecutter.project_slug}}"]
mccabe.max-complexity = 18
pep8-naming.classmethod-decorators = [
    "classmethod",
    "pydantic.validator",
]

[tool.setuptools_scm]

[tool.tomlsort]
sort_inline_arrays = false
sort_inline_tables = true
sort_table_keys = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.tox]
legacy_tox_ini = """
    [gh-actions]
    python =
        3.8: py38
        3.9: py39
        3.10: py310
        3.11: py311

    [testenv]
    skip_install = true
    description =
        Test package creation
    deps =
        cookieninja
        pytest
    commands =
        pytest {posargs}

    [tox]
    envlist = py3{8,9,10,11}
"""
