[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
authors = [
    {email = "{{ cookiecutter.email }}", name = "{{ cookiecutter.full_name }}"},
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
]
description = "{{ cookiecutter.project_short_description }}"
dynamic = [
    "version",
]
keywords = [
]
name = "{{ cookiecutter.project_slug }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.min_python_version }}, <={{ cookiecutter.max_python_version }}"
license.file = "LICENSE.md"
optional-dependencies.dev = [
    "black",
    "mypy",
    "pre-commit",
    "tox",
]
urls.homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.coverage]
report = {skip_covered = true, sort = "cover"}
run = {branch = true, parallel = true, source = [
    "{{ cookiecutter.project_slug }}",
]}
paths.source = [
    "src",
    ".tox*/*/lib/python*/site-packages",
]

[tool.mypy]
explicit_package_bases = true
plugins = [
    "numpy.typing.mypy_plugin",
    "pydantic.mypy",
]

[tool.pytest.ini_options]
addopts = "--color=yes -v"
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
force-exclude = true
per-file-ignores = {"tests/*" = [
    "S101",
]}
select = [
    "A",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]

isort.known-first-party = [
    "{{ cookiecutter.project_slug | replace('-', '_') }}",
]
mccabe.max-complexity = 18
pep8-naming.classmethod-decorators = [
    "classmethod",
    "pydantic.validator",
]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."tool.coverage.paths.source".inline_arrays = false

[tool.tox]
legacy_tox_ini = """
    [gh-actions]
    python =
    {%- for python_version in range(
        cookiecutter.min_python_version | replace('3.', '') | int,
        cookiecutter.max_python_version | replace('3.', '') | int + 1
    ) %}
        3.{{ python_version }}: py3{{ python_version }}
    {%- endfor %}

    [testenv]
    commands =
        pytest --cov
    deps =
        pytest
        pytest-cov

    [tox]
    env_list =
    {%- for python_version in range(
        cookiecutter.min_python_version | replace('3.', '') | int,
        cookiecutter.max_python_version | replace('3.', '') | int + 1
    ) %}
        py3{{ python_version }}
    {%- endfor %}
"""

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/{{ cookiecutter.project_slug }}/_version.py"
