[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
authors = [
    {email = "{{cookiecutter.author_email}}", name = "{{cookiecutter.author_given_names}} {{cookiecutter.author_family_names}}"},
]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    {%- for python_version in range(
       cookiecutter.min_python_version | replace('3.', '') | int,
       cookiecutter.max_python_version | replace('3.', '') | int + 1
    ) %}
    "Programming Language :: Python :: 3.{{python_version}}",
    {%- endfor %}
    "Typing :: Typed",
]
dependencies = [
]
description = "{{cookiecutter.project_short_description}}"
dynamic = [
    "version",
]
keywords = [
]
name = "{{cookiecutter.project_slug}}"
optional-dependencies = {dev = [
    "build",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
    "tox>=4",
    "twine",
]}
readme = "README.md"
requires-python = ">={{cookiecutter.min_python_version}}"
license.file = "LICENSE.md"
urls.homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"

[tool.coverage]
report = {skip_covered = true, sort = "cover"}
run = {branch = true, parallel = true, source = [
    "{{cookiecutter.project_slug}}",
]}
paths.source = [
    "src",
    ".tox*/*/lib/python*/site-packages",
]

[tool.mypy]
explicit_package_bases = true
plugins = [
    "numpy.typing.mypy_plugin",
]

[tool.pytest.ini_options]
addopts = "--color=yes -v"
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
force-exclude = true
ignore = [
    "COM812", #  trailing commas (ruff-format recommended)
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D407", # removed dashes lines under sections
    "D417", # argument description in docstring (unreliable)
    "ISC001", # simplify implicit str concatenation (ruff-format recommended)
]
per-file-ignores = {"tests*" = [
    "INP001",
    "S101",
]}
select = [
    "ALL"
]
target-version = "py{{cookiecutter.min_python_version | replace('.', '')}}"
isort.known-first-party = [
    "{{cookiecutter.project_slug | replace('-', '_')}}",
]
mccabe.max-complexity = 18
pep8-naming.classmethod-decorators = [
    "classmethod",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/{{cookiecutter.package_name}}/_version.py"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false

[tool.tox]
legacy_tox_ini = """
    [gh-actions]
    python =
    {%- for python_version in range(
        cookiecutter.min_python_version | replace('3.', '') | int,
        cookiecutter.max_python_version | replace('3.', '') | int + 1
    ) %}
        3.{{python_version}}: py3{{python_version}}
    {%- endfor %}

    [testenv]
    commands =
        pytest --cov --cov-report=xml
    deps =
        pytest
        pytest-cov

    [tox]
    env_list =
    {%- for python_version in range(
        cookiecutter.min_python_version | replace('3.', '') | int,
        cookiecutter.max_python_version | replace('3.', '') | int + 1
    ) %}
        py3{{python_version}}
    {%- endfor %}
"""
